--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -1,6 +1,17 @@
+server.modules += ( "mod_proxy" )
+
 server.document-root = "/var/www/html/"
 server.port = "8080"
 server.username = "lighttpd"
 server.groupname = "lighttpd"
 static-file.exclude-extensions = (".fcgi", ".php", ".rb", "~", ".inc")
 index-file.names = ("index.html")
+
+proxy.server = (
+    "/get-colour-in" => (
+        (
+            "host" => "<BACKEND_HOST>",
+            "port" => "<BACKEND_PORT>"
+        )
+    )
+)
