configure lighttpd server for test and prod

--- a/lighttpd-prod.conf
+++ b/lighttpd-prod.conf
@@ -1,4 +1,4 @@
-server.modules += ( "mod_proxy" )
+server.modules += ( "mod_proxy", "mod_setenv" )
 
 server.document-root = "/var/www/html/"
 server.port = "8080"
@@ -11,7 +11,12 @@ proxy.server = (
     "/get-colour-in" => (
         (
             "host" => "<BACKEND_HOST>",
-            "port" => "<BACKEND_PORT>"
+            "port" => "8080"
         )
     )
+)
+
+setenv.add-response-header = (
+    "Access-Control-Allow-Origin" => "<BACKEND_HOST>",
+    "Access-Control-Allow-Methods" => "POST"
 )
