--- a/lighttpd-test.conf
+++ b/lighttpd-test.conf
@@ -1,4 +1,4 @@
-server.modules += ( "mod_proxy" )
+server.modules += ( "mod_proxy", "mod_setenv" )
 
 server.document-root = "/var/www/html/"
 server.port = "8080"
