add permissions and defaults to workflow

--- a/.github/workflows/build_upload_s3.yml
+++ b/.github/workflows/build_upload_s3.yml
@@ -11,6 +11,13 @@ jobs:
   build_opencv:
     name: Build code and upload to S3
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
+    defaults:
+      run:
+        shell: bash
+        working-directory: .
     steps:
       - name: Checkout
         uses: actions/checkout@v4
