update paths ignore lists and set app sonar token

--- a/.github/workflows/build-upload-s3.yml
+++ b/.github/workflows/build-upload-s3.yml
@@ -7,6 +7,10 @@ on:
       - main
     paths-ignore:
       - '**.md'
+      - ".github/workflows/ecr-ecs-full-workflow.yml"
+      - "src/App.jsx"
+      - "src/getColourIn.js"
+      - "index.html"
   workflow_dispatch:
     inputs:
       build_opencv:
@@ -37,7 +41,7 @@ jobs:
         id: scan
         uses: sonarsource/sonarqube-scan-action@master
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_APP }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         with:
           projectBaseDir: .
