--- a/.github/workflows/ecr-ecs-full-workflow.yml
+++ b/.github/workflows/ecr-ecs-full-workflow.yml
@@ -7,6 +7,8 @@ on:
       - "feature/**"
     paths-ignore:
       - "**.md"
+      - ".github/workflows/build-upload-s3.yml"
+      - "opencv_js/**"
   workflow_dispatch:
 jobs:
   build-test-upload-ecr:
